# restart

./: .gitignore  architecture.md  cm_type.py  compile_models.sh  install_requirements.sh  param_choice.py  requirements.txt  run_ant_hls.sh  run_ant_hlssim.sh  run_ant_py.sh  temp.md  test.py  todo.md  train.py  train_args.py
models/cmodel_src/: CMakeLists.txt  global.hpp  top.cpp  unitop.cpp
models/cmodel_src/hls/: hls.app
models/cmodel_src/hls/solution1/: directives.tcl  script.tcl  solution1.aps  solution1.directive  solution1_data.json
models/cmodel_src/hls/solution1/syn/report/: actor_top_Pipeline_10_csynth.rpt  actor_top_Pipeline_12_csynth.rpt  actor_top_Pipeline_6_csynth.rpt  actor_top_Pipeline_8_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_103_1_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_106_2_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_112_4_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_20_116_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_20_117_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_20_118_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_20_1_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_27_119_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_27_120_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_27_121_csynth.rpt  actor_top_Pipeline_VITIS_LOOP_27_1_csynth.rpt  actor_top_csynth.rpt  backward_1_Pipeline_VITIS_LOOP_107_1_csynth.rpt  backward_1_Pipeline_VITIS_LOOP_111_2_csynth.rpt  backward_1_Pipeline_VITIS_LOOP_50_1_csynth.rpt  csynth.rpt  (+40 more)
models/cmodel_src/hls_headers/: hls_math.h
models/cmodel_src/net/: .template.hpp  exp.hpp  forkjoin.hpp  linear.hpp  net.hpp  sequence.hpp  tanh.hpp
(+128 files in other folders)
